--- a/SeazonProject/src/main/resources/templates/index.html
+++ b/SeazonProject/src/main/resources/templates/index.html
@@ -2,27 +2,27 @@
 <div layout:fragment="content" class="container my-3">
 
 	<!-- 메인 이미지 -->
-	<div id="carouselExampleControls" class="carousel slide"
+<div id="carouselExampleControls" class="carousel slide"
 		data-bs-ride="carousel">
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<a href="https://pages.coupang.com/p/88703"> <img
-					src="/image/ad_1.jpg" class="d-block w-100" alt="광고1" width="100%"
-					height="370px">
+				<a href="https://www.coffeefestival.net/" target="_blank"> <img
+					src="/image/kanglung.png" class="d-block w-100" alt="강릉커피축제" width="100%"
+					height="600px">
 				</a>
 			</div>
 			
 			<div class="carousel-item">
-				<a href="https://pages.coupang.com/f/s20787"> <img
-					src="/image/ad_2.jpg" class="d-block w-100" alt="광고2" width="100%"
-					height="370px">
+				<a href="https://kimchi.gwangju.go.kr/" target="_blank"> <img
+					src="/image/gwangju.png" class="d-block w-100" alt="광주김치축제" width="100%"
+					height="600px">
 				</a>
 			</div>
 
 			<div class="carousel-item">
-				<a href="https://pages.coupang.com/p/89738"> <img
-					src="/image/ad_3.jpg" class="d-block w-100" alt="광고3" width="100%"
-					height="370px">
+				<a href="http://festival.buncheong.co.kr/main.web" target="_blank"> <img
+					src="/image/buncheng.png" class="d-block w-100" alt="김해분청도자기축제" width="100%"
+					height="600px">
 				</a>
 			</div>
 		</div>
@@ -51,7 +51,7 @@
 			<!-- 첫번째 줄 -->
 			<table class="table table-borderless">
 				<a href="/recipe/list" style="color: green; font-size: 2.0em; text-decoration: none;">
-				오늘의 HOT 레시피</a>
+				이번주 축제</a>
 				<tr>
 					<th th:each="recipe, loop : ${paging1}">
 						<div class="card" style="width: 15rem;">
@@ -68,35 +68,6 @@
 								<div class="card-text">
 									<a th:href="@{|/recipe/detail/${recipe.id}|}"
 									   th:text="${recipe.subject}"></a>
-								</div>
-								추천수 : <span th:text="${#sets.size(recipe.voter)}"></span>
-							</div>
-						</div>
-					</th>
-				</tr>
-			</table>
-
-			<table class="table table-borderless">
-				<a href="/recipe/list"
-					style="color: green; font-size: 2.0em; text-decoration: none;">따끈따근한
-					NEW 레시피</a>
-				<tr>
-					<th th:each="recipe, loop : ${paging2}">
-						<div class="card" style="width: 15rem;">
-							<img th:src="${recipe.filePath}"
-								style="width: 239px; height: 200px;" class="card-img-top"
-								alt="...">
-							<div class="card-body">
-								<h5 class="card-title">
-									<img th:src="${siteUsers2.get(loop.index).profilePath}"
-										class="rounded-circle" width="35px" height="35px"> <span
-										th:if="${recipe.author != null}"
-										th:text="${recipe.author.username}"></span>
-								</h5>
-
-								<div class="card-text">
-									<a th:href="@{|/recipe/detail/${recipe.id}|}"
-										th:text="${recipe.subject}"></a>
 								</div>
 								추천수 : <span th:text="${#sets.size(recipe.voter)}"></span>
 							</div>
