--- a/SeazonProject/src/main/resources/templates/navbar.html
+++ b/SeazonProject/src/main/resources/templates/navbar.html
@@ -39,7 +39,7 @@
 					<a class="nav-link active" aria-current="page" href="#">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/section">전국축제</a>
+					<a class="nav-link" href="/festivals/list">전국축제</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/calendar">축제달력</a>
