--- a/SeazonProject/src/main/resources/templates/navbar.html
+++ b/SeazonProject/src/main/resources/templates/navbar.html
@@ -1,55 +1,34 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
+<nav th:fragment="navbarFragment"
+     class="navbar navbar-expand-lg custom-navbar">
+  <div class="container-fluid">
 
-<style>
-    /* body 또는 전체적인 요소에 폰트 적용 */
-    body {
-        font-family: 'Noto Sans KR', sans-serif;
-    }
-    
-    /* 네비게이션 링크 폰트 크기 조정 및 색상 진하게 */
-    .navbar-nav .nav-link {
-        font-size: 1.1em; /* 폰트 크기 키우기 */
-        font-weight: 500; /* 폰트 두께 조정 */
-        margin-right: 15px; /* 메뉴 항목 간격 넓히기 (선택 사항) */
-    }
-</style>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-<nav th:fragment="navbarFragment" 
-     class="navbar navbar-expand-lg bg-body-tertiary"> 
-          
-	<div class="container-fluid">
+    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
 
-		<a class="navbar-brand" href="/"> 
-            <img src="/image/free-icon-tree-1213403.png" alt="Logo" style="width: 50px;" class="rounded-pill">
-        </a>
-							 
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-			data-bs-target="#navbarSupportedContent"
-			aria-controls="navbarSupportedContent" aria-expanded="false"
-			aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+      <ul class="navbar-nav mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/index">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/festivals/list">전국축제</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/calendar">축제달력</a>
+        </li>
+      </ul>
 
-		<div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-            
-            <ul class="navbar-nav mb-2 mb-lg-0">
-				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/festivals/list">전국축제</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/calendar">축제달력</a>
-				</li>
-			</ul>
-            
-            <form class="d-flex ms-auto" role="search">
-				<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-				<button class="btn btn-outline-success" type="submit">Search</button>
-			</form>
-		</div>
-	</div>
+      <form class="d-flex ms-auto" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+
+    </div>
+
+  </div>
 </nav>
