파일 이름 변경

--- a/SeazonProject/src/main/resources/templates/layout.html
+++ b/SeazonProject/src/main/resources/templates/layout.html
@@ -87,7 +87,7 @@
 
 <!-- templates_script JS -->
 <script th:src="@{/js/signup_script.js}" charset="UTF-8"></script>
-<script th:src="@{/js/recipe_script.js}" charset="UTF-8"></script>
+<script th:src="@{/js/sighUp_script.js}" charset="UTF-8"></script>
 
 <!-- 1단계 : daum 우편번호 서비스 외장 JS(Javascript) 파일 링크 -->
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
