--- a/SeazonProject/src/main/resources/templates/festivalList.html
+++ b/SeazonProject/src/main/resources/templates/festivalList.html
@@ -136,7 +136,7 @@
                 <button id="searchButton" class="btn btn-orange">검색</button>
             </div>
             <div class="col-md-auto">
-                <button id="searchButton" class="btn btn-orange">등록</button>
+              <button type="button" class="btn btn-orange" onclick="location.href='/sighUp/create'">등록</button>
             </div>
 
         </div>
