--- a/SeazonProject/src/main/resources/templates/signUp_form.html
+++ b/SeazonProject/src/main/resources/templates/signUp_form.html
@@ -4,7 +4,7 @@
    <!-- 질문등록 -->
    <h5 class="my-5 border-bottom pb-2">레시피 등록</h5>
    
-   <form th:object="${recipeForm}" method="post"
+   <form th:object="${signUpForm}" method="post"
       enctype="multipart/form-data">
       <input type="hidden" th:name="${_csrf.parameterName}"
          th:value="${_csrf.token}" />
